--- a/style.css
+++ b/style.css
@@ -23,36 +23,9 @@ body {
   max-width: 1200px;
 }
 
-.logo {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.ukno {
-  font-size: 100px;
-  font-weight: bold;
-  color: white;
-  text-shadow: 4px 4px 0 black;
-}
-
-.club {
-  font-size: 80px;
-  color: #FFC700;
-  font-weight: bold;
-  -webkit-text-stroke: 2px black;
-}
-
-.tagline {
-  font-size: 50px;
-  font-style: italic;
-  font-weight: 600;
-}
-
-.freely {
-  color: #FFC700;
-  font-weight: 900;
-  text-shadow: 2px 2px 0 black;
+.logo img {
+  width: 500px;
+  height: auto;
 }
 
 .menu {
