--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 
 .landing-page {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 1535px;
+  height: 789px;
   overflow: hidden;
   background: #2F303A;
   box-sizing: border-box;
